kubernetes/traefik-config/traefik-ariang.yaml
apiVersion: v1
kind: Service
metadata:
  name: ariang
  namespace: traefik
spec:
  externalName: thefactory.local.timo.be # Can also be an IP address
  type: ExternalName
---
apiVersion: v1
kind: Service
metadata:
  name: ariangrpc
  namespace: traefik
spec:
  externalName: thefactory.local.timo.be # Can also be an IP address
  type: ExternalName
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ariang
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ariang.kubernetes.timo.be`)
      kind: Rule
      services:
        - name: ariang
          port: 12003
      middlewares:
        - name: auth
          namespace: traefik
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ariangrpc
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ariang.kubernetes.timo.be`) && PathPrefix(`/jsonrpc`)
      kind: Rule
      services:
        - name: ariangrpc
          port: 12004
      middlewares:
        - name: auth
          namespace: traefik
