kubernetes/traefik-config/traefik-bazarr.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr
  namespace: traefik
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bazarr.kubernetes.timo.be`)
      kind: Rule
      services:
        - name: bazarr-svc
          port: 14002
      middlewares:
        - name: auth
          namespace: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: bazarr-svc
  namespace: traefik
spec:
  externalName: thefactory.local.timo.be # Can also be an IP address
  type: ExternalName
