kubernetes/traefik-config/traefik-huntarr.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: huntarr
  namespace: traefik
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`huntarr.kubernetes.timo.be`) || Host(`huntarr.timo.be`)
      kind: Rule
      services:
        - name: huntarr-svc
          port: 14005
      middlewares:
        - name: auth
          namespace: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: huntarr-svc
  namespace: traefik
spec:
  externalName: thefactory.local.timo.be # Can also be an IP address
  type: ExternalName
