kubernetes/traefik-config/traefik-iventoy.yaml
apiVersion: v1
kind: Service
metadata:
  name: iventoy
  namespace: traefik
spec:
  externalName: iventoy.local.timo.be # Can also be an IP address
  type: ExternalName
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: iventoy
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`iventoy.kubernetes.timo.be`)
      kind: Rule
      services:
        - name: iventoy
          port: 26000
      middlewares:
        - name: auth
          namespace: traefik
