kubernetes/traefik-config/traefik-jdownloader2.yaml
apiVersion: v1
kind: Service
metadata:
  name: jdownloader2
  namespace: traefik
spec:
  externalName: thefactory.local.timo.be # Can also be an IP address
  type: ExternalName
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jdownloader2
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jdownloader2.kubernetes.timo.be`)
      kind: Rule
      services:
        - name: jdownloader2
          port: 12001
      middlewares:
        - name: auth
          namespace: traefik
