kubernetes/traefik-config/traefik-metube.yaml
apiVersion: v1
kind: Service
metadata:
  name: metube
  namespace: traefik
spec:
  externalName: thefactory.local.timo.be # Can also be an IP address
  type: ExternalName
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: metube
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`metube.kubernetes.timo.be`)
      kind: Rule
      services:
        - name: metube
          port: 12002
      middlewares:
        - name: auth
          namespace: traefik
