kubernetes/traefik-config/traefik-netbootxyz.yaml
apiVersion: v1
kind: Service
metadata:
  name: netbootxyz
  namespace: traefik
spec:
  externalName: netbootxyz.local.timo.be # Can also be an IP address
  type: ExternalName
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: netbootxyz
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`netbootxyz.kubernetes.timo.be`)
      kind: Rule
      services:
        - name: netbootxyz
          port: 3000
      middlewares:
        - name: auth
          namespace: traefik
