kubernetes/traefik-config/traefik-paperless.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless
  namespace: traefik
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`paperless.kubernetes.timo.be`)
      kind: Rule
      services:
        - name: paperless-svc
          port: 11004
      middlewares:
        - name: auth
          namespace: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-svc
  namespace: traefik
spec:
  externalName: thefactory.local.timo.be # Can also be an IP address
  type: ExternalName
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless-ai
  namespace: traefik
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`paperlessai.kubernetes.timo.be`)
      kind: Rule
      services:
        - name: paperless-ai-svc
          port: 11005
      middlewares:
        - name: auth
          namespace: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-ai-svc
  namespace: traefik
spec:
  externalName: thefactory.local.timo.be # Can also be an IP address
  type: ExternalName
