kubernetes/traefik-config/traefik-prowlarr.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
  namespace: traefik
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prowlarr.kubernetes.timo.be`) || Host(`prowlarr.timo.be`)
      kind: Rule
      services:
        - name: prowlarr-svc
          port: 14004
      middlewares:
        - name: auth
          namespace: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr-svc
  namespace: traefik
spec:
  externalName: thefactory.local.timo.be # Can also be an IP address
  type: ExternalName
