kubernetes/traefik-config/traefik-proxmox.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: forestsector-svc
  namespace: traefik
spec:
  externalName: forestsector.local.timo.be # Can also be an IP address
  type: ExternalName
---
apiVersion: v1
kind: Service
metadata:
  name: icesector-svc
  namespace: traefik
spec:
  externalName: icesector.local.timo.be
  type: ExternalName
---
apiVersion: v1
kind: Service
metadata:
  name: mountainsector-svc
  namespace: traefik
spec:
  externalName: mountainsector.local.timo.be
  type: ExternalName
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: proxmox
  namespace: traefik
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`proxmox.kubernetes.timo.be`) || Host(`proxmox.timo.be`)
      kind: Rule
      services:
        - name: proxmox-svc
          kind: TraefikService
