kubernetes/traefik-config/traefik-radarr.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  namespace: traefik
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.kubernetes.timo.be`) || Host(`radarr.timo.be`)
      kind: Rule
      services:
        - name: radarr-svc
          port: 14001
      middlewares:
        - name: auth
          namespace: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: radarr-svc
  namespace: traefik
spec:
  externalName: thefactory.local.timo.be # Can also be an IP address
  type: ExternalName
