kubernetes/traefik-config/traefik-recommendarr.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: recommendarr
  namespace: traefik
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`recommendarr.kubernetes.timo.be`) || Host(`recommendarr.timo.be`)
      kind: Rule
      services:
        - name: recommendarr-svc
          port: 14006
      middlewares:
        - name: auth
          namespace: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: recommendarr-svc
  namespace: traefik
spec:
  externalName: thefactory.local.timo.be # Can also be an IP address
  type: ExternalName
