kubernetes/traefik-config/traefik-sonarr.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: traefik
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.kubernetes.timo.be`)
      kind: Rule
      services:
        - name: sonarr-svc
          port: 443
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr-svc
  namespace: traefik
spec:
  externalName: sonarr.thefactory.timo.be # Can also be an IP address
  type: ExternalName
