kubernetes/traefik-config/traefik-sunshine.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sunshine
  namespace: traefik
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sunshine.kubernetes.timo.be`) || Host(`sunshine.timo.be`)
      kind: Rule
      services:
        - name: sunshine-svc
          port: 47990
          scheme: https
          serversTransport: sunshine-serverstransport
      middlewares:
        - name: auth
          namespace: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: sunshine-svc
  namespace: traefik
spec:
  externalName: gamingserver.local.timo.be # Can also be an IP address
  type: ExternalName
