kubernetes/traefik-config/traefik-unifi.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: unifi
  namespace: traefik
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`unifi.kubernetes.timo.be`) || Host(`unifi.timo.be`)
      kind: Rule
      services:
        - name: unifi-svc
          port: 443
          serversTransport: unifi-serverstransport
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-svc
  namespace: traefik
spec:
  externalName: 10.10.10.1 # Can also be an IP address
  type: ExternalName
